--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             font-size: 16px;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin: 0 5px;
         }
         button:hover {
             background-color: #2980b9;
@@ -109,6 +110,26 @@
             height: 10px;
             border-radius: 10px;
             transition: width 0.5s;
+        }
+        .trait-row {
+            margin: 20px 0;
+            text-align: left;
+        }
+        .trait-scale {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 5px;
+        }
+        .trait-label {
+            font-weight: bold;
+            color: #2c3e50;
+        }
+        #user-summary {
+            margin: 20px 0;
+            padding: 15px;
+            background-color: #eef7ff;
+            border-radius: 8px;
+            text-align: left;
         }
     </style>
 </head>
@@ -350,15 +371,3 @@
                         <div class="option-label">
                             <input type="radio" name="q8" value="P" id="q8c">
                             <label for="q8c">Flexible and adaptable to current needs</label>
-                        </div>
-                        <div class="option-label">
-                            <input type="radio" name="q8" value="P" id="q8d">
-                            <label for="q8d">Creative with some degree of organized chaos</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="button-container">
-                <button id="prev-btn" style="display: none;">Previous</button>
-                <button i
